// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptItem rendering tests PromptItem - categories empty - rendered test 1`] = `
<div>
  <div
    class="text-card-foreground flex flex-col shadow-sm group relative gap-0 rounded-lg border border-slate-300 bg-white p-0 transition-all duration-200 hover:border-slate-400 hover:shadow-md"
    data-slot="card"
    data-testid="prompt-list-item"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-3 border-b border-slate-200 p-5 pb-3"
      data-slot="card-header"
    >
      <a
        class="group/title"
        data-testid="view-details-link-title"
        href="/prompts/334db648-f300-4284-8149-075ff465d751"
      >
        <h4
          class="cursor-pointer text-lg leading-tight font-semibold text-slate-900 transition-colors hover:text-blue-700"
        >
          title 1
        </h4>
      </a>
      <div>
        <span
          class="self-start rounded-md border border-blue-200 bg-blue-50 px-2.5 py-1 text-xs font-medium text-blue-700"
        >
          model 1
        </span>
      </div>
    </div>
    <div
      class="grid gap-3 p-5"
      data-slot="card-content"
    >
      <div
        class="mb-2 flex flex-wrap gap-1"
        data-testid="categories"
      />
    </div>
  </div>
</div>
`;

exports[`PromptItem rendering tests PromptItem - with categories - rendered test 1`] = `
<div>
  <div
    class="text-card-foreground flex flex-col shadow-sm group relative gap-0 rounded-lg border border-slate-300 bg-white p-0 transition-all duration-200 hover:border-slate-400 hover:shadow-md"
    data-slot="card"
    data-testid="prompt-list-item"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-3 border-b border-slate-200 p-5 pb-3"
      data-slot="card-header"
    >
      <a
        class="group/title"
        data-testid="view-details-link-title"
        href="/prompts/334db648-f300-4284-8149-075ff465d751"
      >
        <h4
          class="cursor-pointer text-lg leading-tight font-semibold text-slate-900 transition-colors hover:text-blue-700"
        >
          title 1
        </h4>
      </a>
      <div>
        <span
          class="self-start rounded-md border border-blue-200 bg-blue-50 px-2.5 py-1 text-xs font-medium text-blue-700"
        >
          model 1
        </span>
      </div>
    </div>
    <div
      class="grid gap-3 p-5"
      data-slot="card-content"
    >
      <div
        class="mb-2 flex flex-wrap gap-1"
        data-testid="categories"
      >
        <span
          class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
        >
          category 0
        </span>
        <span
          class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
        >
          category 1
        </span>
        <span
          class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
        >
          category 2
        </span>
      </div>
    </div>
  </div>
</div>
`;
